<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:paddingBottom="16dp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_description"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            android:paddingBottom="24dp" />

        <!-- Sections -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_registration"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_bold"
            android:paddingBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_registration_details"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            android:paddingBottom="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ordering_process"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_bold"
            android:paddingBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ordering_process_details"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            android:paddingBottom="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_bold"
            android:paddingBottom="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment_methods"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            android:paddingBottom="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Stall_Operations"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_bold"
            android:paddingBottom="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inventory_menu_management"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            android:paddingBottom="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/General_Conditons"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_bold"
            android:paddingBottom="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_usage"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            android:paddingBottom="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_agreement"
            android:textColor="@color/green"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_regular"
            android:paddingBottom="16dp" />


        <Button
            android:id="@+id/acceptButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/poppins_bold"
            android:padding="20dp"
            android:text="@string/accept_terms_button"
            android:textColor="@color/white"
            android:visibility="visible"
            tools:visibility="visible" />

    </LinearLayout>
</ScrollView>
