<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="24dp">

    <ImageButton
        android:id="@+id/btnBack_otp"
        android:layout_width="318dp"
        android:layout_height="38dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="1000dp"
        android:background="@drawable/otp"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <LinearLayout
        android:layout_width="365dp"
        android:layout_height="673dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="27dp">

    <ImageView
        android:id="@+id/imgIllustration"
        android:layout_width="300dp"
        android:layout_height="280dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        android:src="@drawable/otp_illustration"
        android:contentDescription="@string/otp_illustration_description" />

    <!-- Enter OTP Text -->
    <TextView
        android:id="@+id/tvEnterOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgIllustration"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/enter_otp"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <!-- OTP Description -->
    <TextView
        android:id="@+id/tvOtpDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvEnterOtp"
        android:layout_marginTop="4dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/otp_description"
        android:textColor="@color/gray"
        android:textSize="16sp" />

    <!-- OTP Input Fields -->
    <LinearLayout
        android:id="@+id/otpContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvOtpDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/otp1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/otp_box"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="20sp"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <EditText
            android:id="@+id/otp2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/otp_box"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="20sp"
            android:layout_marginStart="8dp"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <EditText
            android:id="@+id/otp3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/otp_box"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="20sp"
            android:layout_marginStart="8dp"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <EditText
            android:id="@+id/otp4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/otp_box"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="20sp"
            android:layout_marginStart="8dp"
            android:focusable="true"
            android:focusableInTouchMode="true" />
    </LinearLayout>

    <!-- Countdown Timer -->
    <TextView
        android:id="@+id/tvCountdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/otpContainer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/otp_countdown"
        android:textColor="@color/gray"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnVerify"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_below="@id/tvCountdown"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/verify"
        android:textColor="@color/white"
        android:textSize="22sp" />
    </LinearLayout>
</RelativeLayout>